deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yeti
  labels:
    app: yeti
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yeti
  template:
    metadata:
      labels:
        app: yeti
    spec:
      serviceAccountName: yeti
      containers:
        - name: yeti
          image: 768972016120.dkr.ecr.us-west-2.amazonaws.com/yeti:0.0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
