deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yeti
  labels:
    app: yeti
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: yeti
